--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,43 +1,80 @@
    <!--Footer-->
     <footer id="footer" class="footer">
-      <div class="container text-center">
-    
-      <h3>Start Your Free Trial Now!</h3>
-    
-      <form class="mc-trial row">
-        <div class="form-group col-md-3 col-md-offset-2 col-sm-4">
-          <div class=" controls">
-            <input name="name" placeholder="Enter Your Name" class="form-control" type="text">
-          </div>
-        </div><!-- End email input -->
-        <div class="form-group col-md-3 col-sm-4">
-          <div class=" controls">
-            <input name="EMAIL" placeholder="Enter Your email" class="form-control" type="email">
-          </div>
-        </div><!-- End email input -->
-        <div class="col-md-2 col-sm-4">
-          <p>
-            <button name="submit" type="submit" class="btn btn-block btn-submit">
-            Submit <i class="fa fa-arrow-right"></i></button>
-          </p>
+      <section class="full-width-grad" id="footer-precursor">
+    	<div class="container">
+		    <div class="row">
+		      	<div class="col-md-3 col-sm-12">
+                <h4>About Company</h4>
+
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</p>
+                    
+                    <p> 
+                        <a href="#" title="Terms of Use">Terms of Use</a><br />
+                        <a href="#" title="Privacy Policy">Privacy Policy</a><br />
+                        <a href="#" title="FAQ">FAQ</a><br />
+                        <a href="#" title="Sitemap">Sitemap</a>
+                    </p>
+             
+              </div>
+                <div class="col-md-3 col-sm-12">
+                    <h4>Services</h4>
+                    <ul>
+                    	<li><a href="/termsconditions">Exterior Hand Wash</a>
+                        </li>
+                        <li><a href="#">Exterior Hand Wash</a>
+                        </li>
+                        <li><a href="#">Exterior Hand Wash</a>
+                        </li>
+                        <li><a href="#">Exterior Hand Wash</a>
+                        </li>
+                    </ul>
+                  
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <h4>Where to find us</h4>
+                    <p><strong>Wash My Car.</strong>
+                        <br> 4th Floor
+                        <br>169 
+                        <br>Bangur Avenue 
+                        <br>Kolkata
+                        <br>West Bengal 700055
+                        <br>
+                        <strong>India</strong>
+                    </p>
+                    
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <h4>Contact Us</h4>
+                    <p class="footer-contact">
+                    	<a href="mailto:washmycar@gmail.com"><i class="fa fa-envelope fa-fw"></i> Washmycar</a>
+                    	<br>
+                    	<a href="#"><i class="fa fa-phone fa-fw"></i> +9865446778883</a>
+                    </p>
+
+                   <hr>
+                   <h4>Stay in touch</h4>
+                   <p>
+                      <a id="footer-facebook-link" href="#"><i class="fa fa-facebook fa-fw"></i></a>
+                       <a id="footer-twitter-link" href="#"><i class="fa fa-twitter fa-fw"></i></a>
+                       <a id="footer-instagram-link" href="#"><i class="fa fa-instagram fa-fw"></i></a> 
+                       <a id="footer-google-plus-link" href="mailto:vaibhav@authenticstones.com"><i class="fa fa-google-plus fa-fw"></i></a>
+                      
+                       
+                   </p>
+               </div>
+		</div>
+	</div>
+<div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+            	<p id="copyright-container">©2016 Wash My Car., Ltd. All Rights Reserved </p>
+            </div>
+            <div class="col-sm-6 col-md-6">
+            	<p id="our-link-container">Template and Site designed and built by <a id="our-link" href="#">Ewebwizards</a></p>
+            </div>
         </div>
-      </form><!-- End newsletter-form -->
-      <ul class="social-links">
-        <li><a href="#link"><i class="fa fa-twitter fa-fw"></i></a></li>
-        <li><a href="#link"><i class="fa fa-facebook fa-fw"></i></a></li>
-        <li><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li>
-        <li><a href="#link"><i class="fa fa-dribbble fa-fw"></i></a></li>
-        <li><a href="#link"><i class="fa fa-linkedin fa-fw"></i></a></li>
-      </ul>
-        ©2016 Mentor Theme. All rights reserved
-        <div class="credits">
-            <!-- 
-                All the links in the footer should remain intact. 
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Mentor
-            -->
-            Designed by <a href="http://ewebwizards.com/">EWebWizards</a>
-        </div>
-      </div>
-    </footer>
+    </div>
+  </div>
+  </section>
+  </footer>
