--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -559,51 +559,22 @@ Footer
 .footer {
     padding: 60px 0 20px;
     background: #111;
-    color: #ccc;
-}
-.footer a {
-    color: #fff;
+    color:#A8B1B6;
 }
 
-.footer h3{
-	font-weight: 300;
-	letter-spacing: 0.05em;
-	margin: 0 0 40px;
-	font-size: 24px;
+.footer h4{
+  color: #fff;  
 }
-.footer .form-control {
-    border-radius: 30px;
-    border: none;
-    background: rgba(255,255,255,.1);
-    padding-left: 30px;
-    color: #e5e6e7;
-    margin-bottom: 0;
-    height: 48px;
+
+.footer ul{
+padding :0px;
 }
-.footer .social-links li a {
-    color: #fff;
-    font-size: 32px;
-    line-height: 50px;
-    border-radius: 50%;
-    text-align: center;
-    -webkit-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
-.footer .social-links li {
-    display: inline-block;
-    margin: 0 25px 25px;
-    -webkit-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
-.footer .mc-trial {
-    margin: 20px 0;
-}
-.footer .social-links {
-    list-style: none;
-    padding: 0;
-    margin: 30px 0 40px;
-    padding: 40px 0 0;
-    border-bottom: 1px solid rgba(255,255,255,0.2);
+
+.footer-bottom {
+    padding-top: 14px;
+    padding-bottom: 14px;
+    font-size: 13px;
+    line-height: 28px;
 }
 .btn-submit:hover, .btn-submit:focus{
     background-color: #cc0000;
