--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -4,11 +4,53 @@
         <div class="row">
           <div class="header-section text-center">
             <h2>Contact Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line">
+             <hr class="bottom-line">
+            	<div class="row">
+							<div class="col-sm-4 addressDetails">
+								<h4>
+									<i class="fa fa-map-marker"></i> Address
+								</h4>
+								<p class="very-small-text">
+									4th Floor <br>Suite 401 <br>Mahaseak
+									Rd. <br>Suriyawongse, Bangrak <br>Bangkok 10500 <br>
+									<strong>Thailand</strong>
+								</p>
+							</div>
+							<!-- /.col-sm-4 -->
+							<div class="col-sm-4 addressDetails">
+								<h4>
+									<i class="fa fa-phone"></i> Call center
+								</h4>
+								<p>
+								 +9875433222335
+								</p>
+							</div>
+							<!-- /.col-sm-4 -->
+							<div class="col-sm-4 addressDetails">
+								<h4>
+									<i class="fa fa-envelope"></i> Electronic support
+								</h4>
+								<p class="text-muted">Please feel free to write an email to
+									us</p>
+								<ul>
+									<li><strong><a href="mailto:">washmycar@gmail.com</a></strong>
+									</li>
+								</ul>
+							</div>
+							<!-- /.col-sm-4 -->
+						</div>
+            <hr>
+
+						<div class="row">
+							<div class="col-md-12">
+								<div id="googleMap" style="height:400px;"></div>
+							</div>
+						</div>
+						<hr>
           </div>
           <div id="sendmessage">Your message has been sent. Thank you!</div>
           <div id="errormessage"></div>
+          <div class="col-sm-12"><h4>Contact form</h4></div>
           <form action="" method="post" role="form" class="contactForm">
               <div class="col-md-6 col-sm-6 col-xs-12 left">
                 <div class="form-group">
@@ -18,6 +60,9 @@
                 <div class="form-group">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                     <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                    <input type="contactno" class="form-control" name="contactno" id="contactno" placeholder="Your Contact Number" data-msg="Please enter a valid contact number" />
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
