--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -84,11 +84,12 @@ Navigation bar
 	border-radius: 25px;
 	color: #ffffff !important;
 	border: 1px solid #cc0000;
+    padding: 10px 15px;
 }
 .btn-trial a:hover, .btn-trial a:focus{
 	border: 1px solid #cc0000;
-	background-color: #fff;
-	color: #fff !important;
+	background-color: #E5D5D5;
+	color: #cc0000 !important;
 }
 .navbar-default .navbar-brand {
     font-family: 'Dosis', sans-serif !important;
@@ -378,7 +379,7 @@ Work Shop
 }
 .service-box{
     background: #fff;
-    padding: 60px 30px 80px;
+    padding: 0px 30px 22px;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
 }
 .icon-box i {
@@ -390,6 +391,10 @@ Work Shop
 }
 .icon-box, .icon-text {
     padding: 20px 0px 0px;
+    font-size: 14px;
+}
+.service-box .highlight {
+    color: #cc0000;
 }
 /***********************************
 Mentor Team
@@ -493,6 +498,9 @@ Price Table
 /***********************************
 Contact Us
 ************************************/
+#contact {
+    background-color: rgb(247, 247, 247);
+}
 .contact form .form {
     width: 100%;
     height: auto;
