Home page designing

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,3 +1,13 @@
-<p>
-  aboutus works!
-</p>
+<section id="aboutUs" class="section-padding">
+  <div class="container">
+    <div class="row text-center">
+      <div class="header-section">
+        <h2>Know more about Us</h2>
+        <hr class="bottom-line">
+      </div>
+      <div class="col-xs-12">
+        <h4>We provide Doorstep car cleaning services in Kolkata</h4>
+      </div>
+    </div>
+  </div>
+</section>
