--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,10 @@
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a [routerLink]="['/services']"> Services</a></li>
-          <li><a href="#organisations">Pricing</a></li>
+          <li><a [routerLink]="['/pricing']">Pricing</a></li>
           <li><a [routerLink]="['/aboutus']"> About Us</a></li>
           <li><a [routerLink]="['/contactus']"> Contact Us</a></li>
-          <li class="btn-trial"><a href="#footer">Sign in</a></li>
+          <li class="btn-trial"><a [routerLink]="['/login']">Sign in</a></li>
         </ul>
         </div>
       </div>
