--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,48 +1,50 @@
-    <!--Feature-->
-    <section id ="feature" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="header-section text-center">
-            <h2>Features</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line">
+<!--Feature-->
+<section id="feature" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="header-section text-center">
+        <h2>Who are We</h2>
+        <p>We provide Doorstep Car cleaning services by trained professionals anywhere in Kolkata.</p>
+        <p>Enjoy hassle-free convenience at your suitable time and place.
+        </p>
+        <hr class="bottom-line">
+      </div>
+      <div class="feature-info">
+        <div class="fea">
+          <div class="col-md-4">
+            <div class="heading pull-right">
+              <h4>Waterless eco-friendly</h4>
+              <p>We encourage waterless and eco-friendly cleaning services.</p>
+            </div>
+            <div class="fea-img pull-left">
+              <i class="fa fa-bitbucket"></i>
+            </div>
           </div>
-          <div class="feature-info">
-            <div class="fea">
-              <div class="col-md-4">
-                <div class="heading pull-right">
-                  <h4>Latest Technologies</h4>
-                  <p>Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
-                </div>
-                <div class="fea-img pull-left">
-                  <i class="fa fa-css3"></i>
-                </div>
-              </div>
-            </div>
-            <div class="fea">
-              <div class="col-md-4">
-                <div class="heading pull-right">
-                  <h4>Toons Background</h4>
-                  <p>Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
-                </div>
-                <div class="fea-img pull-left">
-                  <i class="fa fa-drupal"></i>
-                </div>
-              </div>
-            </div>
-            <div class="fea">
-              <div class="col-md-4">
-                <div class="heading pull-right">
-                  <h4>Award Winning Design</h4>
-                  <p>Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
-                </div>
-                <div class="fea-img pull-left">
-                  <i class="fa fa-trophy"></i>
-                </div>
-              </div>
-            </div>
         </div>
+        <div class="fea">
+          <div class="col-md-4">
+            <div class="heading pull-right">
+              <h4>Best-in-class Products</h4>
+              <p>We use best-in-class cleaning products.</p>
+            </div>
+            <div class="fea-img pull-left">
+              <i class="fa fa-superpowers"></i>
+            </div>
+          </div>
+        </div>
+        <div class="fea">
+          <div class="col-md-4">
+            <div class="heading pull-right">
+              <h4>Trained Professionals</h4>
+              <p>Our professionals are trained and will take best care of your car.</p>
+            </div>
+            <div class="fea-img pull-left">
+              <i class="fa fa-user-o"></i>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
     <!--/ feature-->
